# gcp-claw

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  ROADMAP_EXECUTION.md  SECURITY.md  TASKS.md  bandit.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml
gcpclaw/: agent.py  config.py  logging_utils.py
gcpclaw/skills/example-skill/: SKILL.md
gcpclaw/tools/: extend.py  extension_runner.py  extension_sandbox.py  files.py  shell.py  web.py
tests/: test_agent.py  test_config.py  test_extend_tool.py  test_extension_runner.py  test_extension_sandbox.py  test_files_tool.py  test_shell_tool.py  test_web_tool.py
