[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcpclaw"
version = "0.1.0"
description = "A self-extending personal AI assistant built on Google Cloud ADK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "google-adk>=1.26.0",
  "litellm>=1.82.0",
  "python-dotenv>=1.2.2",
  "requests>=2.32.5",
  "beautifulsoup4>=4.14.3",
  "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.13.2",
  "mypy>=1.18.2",
  "bandit>=1.8.6",
  "pip-audit>=2.9.0",
  "types-requests>=2.32.4",
  "types-PyYAML>=6.0.12",
  "pre-commit>=4.3.0",
  "pip-tools>=7.5.0",
  "cyclonedx-bom>=7.2.1",
]

[tool.setuptools.packages.find]
include = ["gcpclaw*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["tests"]
